--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,25 @@ body {
   margin: 0;
 }
 
+navbar {
+  top: 0;
+  position: fixed;
+  background-color: black;
+  color: white;
+  width: 100%;
+  padding: 5px;
+  /* font-size: 1.25em; */
+  /* z-index: 1; */
+  text-align: center;
+}
+
 .container {
   position: relative;
 }
 
 #backgroundImg {
   width: 100vw;
-  height: 100vh;
+  height: 100px;
   /* overflow-y: hidden; */
   /* opacity: 0.5; */
   /* height: auto; */
