--- a/styles/style.css
+++ b/styles/style.css
@@ -20,12 +20,16 @@ navbar {
   top: 0;
   position: fixed;
   background-color: black;
-  color: white;
   width: 100%;
   padding: 5px;
   /* font-size: 1.25em; */
   /* z-index: 1; */
   text-align: center;
+}
+
+navbar a {
+  color: white;
+  text-decoration: none;
 }
 
 .container {
@@ -41,10 +45,26 @@ navbar {
   /* background-position: center center; */
 }
 
+#logo {
+  width: 100px;
+  height: 100px;
+}
+
 .center {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 30px;
+}
+
+footer {
+  text-align: center;
+  position: absolute;
+  color: #fff;
+  bottom: 0;
+  background-color: black;
+  width: 100%;
+  padding: 5px;
+  /* z-index: 1; */
 }
