--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ navbar a:hover {
   padding: 16px 32px;
   /* text-align: center; */
   /* text-decoration: none; */
-  display: inline-block;
+  /* display: inline-block; */
   font-size: 16px;
   margin: 4px 2px;
   transition-duration: 0.4s;
@@ -51,11 +51,11 @@ navbar a:hover {
 }
 
 #backgroundImg {
-  width: 100vw;
-  height: 100px;
+  /* width: 100vw; */
+  /* height: 100px; */
   /* overflow-y: hidden; */
   /* opacity: 0.5; */
-  /* height: auto; */
+  height: auto;
   /* background-position: center center; */
 }
 
@@ -73,12 +73,13 @@ navbar a:hover {
 }
 
 .container {
-  position: relative;
+  /* position: relative; */
   background-color: lightgreen;
   border: 1px solid black;
   padding: 10px;
   margin: 10px 200px 10px 200px;
   font-size: 1.2em;
+  text-align: center;
 }
 
 .merchItems {
@@ -105,11 +106,13 @@ navbar a:hover {
   display: flex;
   flex-direction: column;
   width: 30%;
+  text-align: center;
 }
 
 #contactContainer {
   background-color: #f2f2f2;
   padding: 20px;
+  border: 1px solid black;
 }
 
 footer {
