--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@ body {
   overflow-x: hidden;
 }
 
+/* -------------------- Navbar -------------------- */
+
 navbar {
   background-color: black;
   display: inline-block;
@@ -52,26 +54,25 @@ navbar a:hover {
   /* cursor: pointer; */
 }
 
-#backgroundImg {
+.bgContainer h1 {
+  font-size: 60px;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.bgContainer img {
   height: auto;
   /* width: 100vw; */
-  /* height: 100px; */
   /* overflow-y: hidden; */
-  /* opacity: 0.5; */
+  opacity: 0.8;
   /* background-position: center center; */
 }
 
 #logo {
   width: 60px;
   height: 60px;
-}
-
-#logoCenterText {
-  font-size: 30px;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .container {
@@ -85,6 +86,20 @@ navbar a:hover {
   text-align: center;
 }
 
+.box {
+  width: 100%;
+}
+
+.box.one {
+  background-color: black;
+}
+
+.box.two {
+  background-color: grey;
+}
+
+/* -------------------- Merch -------------------- */
+
 .merchItems {
   background-color: darkgrey;
   border: 1px solid black;
@@ -94,6 +109,25 @@ navbar a:hover {
   font-size: 1em;
 }
 
+.overlay {
+  position: absolute;
+  /* top: 0; */
+  /* bottom: 0; */
+  /* left: 0; */
+  /* right: 0; */
+  height: 450px;
+  width: 450px;
+  opacity: 1;
+  transition: 0.5s ease;
+  background-color: blue;
+}
+
+.testimonials:hover .overlay {
+  opacity: 0;
+}
+
+/* -------------------- Blog -------------------- */
+
 .blogPosts {
   background-color: darkgrey;
   border: 1px solid black;
@@ -102,11 +136,17 @@ navbar a:hover {
   height: 400px;
   margin: 10px;
   padding: 10px;
-  text-align: justify;
+  /* text-align: justify; */
   text-indent: 50px;
-  text-justify: inter-word;
+  /* text-justify: inter-word; */
   width: 300px;
 }
+
+.blogPosts h1 {
+  text-align: center;
+}
+
+/* -------------------- Contact -------------------- */
 
 #contact {
   display: flex;
@@ -120,6 +160,8 @@ navbar a:hover {
   border: 1px solid black;
   padding: 20px;
 }
+
+/* -------------------- Buttons -------------------- */
 
 .btn {
   background-color: white;
@@ -139,6 +181,8 @@ navbar a:hover {
   background-color: darkgrey;
   color: white;
 }
+
+/* -------------------- Footer -------------------- */
 
 footer {
   text-align: center;
