--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
   font-family: "Roboto", sans-serif;
   height: 100vh;
-  justify-content: center;
+  /* justify-content: center; */
   margin: 0;
   overflow-x: hidden;
 }
@@ -54,7 +54,45 @@ navbar a:hover {
   /* cursor: pointer; */
 }
 
-.bgContainer h1 {
+/* -------------------- Background Image -------------------- */
+
+/* .bgContainer img { */
+/* height: auto; */
+/* opacity: 0.8;   */
+/* width: 100vw; */
+/* overflow-y: hidden; */
+/* background-position: center center; */
+/* } */
+
+.backgroundImgOne {
+  /* background-image: "C:\Users\awill\code\__Personal Projects__\The-Fearless-Eater\assets\pexels-photo-67468.jpeg"; */
+  /* width: 100vw; */
+  /* min-height: 500px; */
+  /* min-width: 100%; */
+  /* height: 500px; */
+  /* width: "1000"; */
+
+  /* height: "300px"; */
+
+  /* position: relative; */
+  /* opacity: 0.65; */
+
+  /* background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+}
+
+.backgroundImgTwo {
+  position: relative;
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bgContainer1 h1 {
   font-size: 60px;
   left: 50%;
   position: absolute;
@@ -62,20 +100,14 @@ navbar a:hover {
   transform: translate(-50%, -50%);
 }
 
-.bgContainer img {
-  height: auto;
-  /* width: 100vw; */
-  /* overflow-y: hidden; */
-  opacity: 0.8;
-  /* background-position: center center; */
-}
-
-#logo {
+#logo1 {
   width: 60px;
   height: 60px;
 }
 
-.container {
+/* -------------------- Container -------------------- */
+
+.container1 {
   background-color: black;
   border: 1px solid black;
   color: white;
@@ -86,21 +118,19 @@ navbar a:hover {
   text-align: center;
 }
 
-.box {
+.boxOne {
   width: 100%;
-}
-
-.box.one {
   background-color: black;
 }
 
-.box.two {
+.boxTwo {
+  width: 100%;
   background-color: grey;
 }
 
 /* -------------------- Merch -------------------- */
 
-.merchItems {
+.merchItems1 {
   background-color: darkgrey;
   border: 1px solid black;
   display: inline-block;
@@ -109,7 +139,7 @@ navbar a:hover {
   font-size: 1em;
 }
 
-.overlay {
+.overlay1 {
   position: absolute;
   /* top: 0; */
   /* bottom: 0; */
@@ -128,7 +158,7 @@ navbar a:hover {
 
 /* -------------------- Blog -------------------- */
 
-.blogPosts {
+.blogPosts1 {
   background-color: darkgrey;
   border: 1px solid black;
   display: inline-block;
@@ -142,7 +172,7 @@ navbar a:hover {
   width: 300px;
 }
 
-.blogPosts h1 {
+.blogPosts1 h1 {
   text-align: center;
 }
 
