--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,9 @@
 /* You can add this to just about everything. If you add any padding or border to an element, it won't affect the width of it */
 
 body {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
+  /* align-items: center; */
+  /* display: flex; */
+  /* flex-direction: column; */
   font-family: "Roboto", sans-serif;
   height: 100vh;
   /* justify-content: center; */
@@ -54,7 +54,7 @@ navbar a:hover {
   /* cursor: pointer; */
 }
 
-/* -------------------- Background Image -------------------- */
+/* -------------------- Background Images -------------------- */
 
 /* .bgContainer img { */
 /* height: auto; */
@@ -69,13 +69,27 @@ navbar a:hover {
   /* width: 100vw; */
   /* min-height: 500px; */
   /* min-width: 100%; */
-  /* height: 500px; */
-  /* width: "1000"; */
+  height: 750px;
+  width: 100%;
+  /* background-position: center center; */
+  object-fit: cover;
 
   /* height: "300px"; */
 
   /* position: relative; */
   /* opacity: 0.65; */
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.backgroundImgTwo {
+  position: relative;
+  height: 750px;
+  width: 100%;
+  object-fit: cover;
 
   /* background-attachment: fixed;
   background-position: center;
@@ -83,13 +97,28 @@ navbar a:hover {
   background-size: cover; */
 }
 
-.backgroundImgTwo {
+.backgroundImgThree {
   position: relative;
+  height: 750px;
+  width: 100%;
+  object-fit: cover;
 
-  background-attachment: fixed;
+  /* background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
+}
+
+.backgroundImgFour {
+  position: relative;
+  height: 750px;
+  width: 100%;
+  object-fit: cover;
+
+  /* background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
 }
 
 .bgContainer1 h1 {
@@ -100,7 +129,7 @@ navbar a:hover {
   transform: translate(-50%, -50%);
 }
 
-#logo1 {
+#logo {
   width: 60px;
   height: 60px;
 }
