--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,17 @@ body {
   /* justify-content: center; */
   margin: 0;
   overflow-x: hidden;
+
+  /* background-color: steelblue;
+  color: #fff;
+  font-family: "Muli", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0; */
 }
 
 /* -------------------- Navbar -------------------- */
@@ -224,6 +235,15 @@ navbar a:hover {
   background-color: #f2f2f2;
   border: 1px solid black;
   padding: 20px;
+}
+
+/* -------------------- Forms -------------------- */
+
+form {
+  border: 1px solid black;
+  margin: 15px;
+  padding: 15px;
+  width: 400px;
 }
 
 /* -------------------- Buttons -------------------- */
