--- a/styles/style2.css
+++ b/styles/style2.css
@@ -18,6 +18,8 @@ body {
   overflow: hidden;
 }
 
+/* ------------------------------------------- Containers ------------------------------------------- */
+
 .container {
   background-color: lightslategray;
   border-radius: 5px;
@@ -33,6 +35,8 @@ body {
   color: slateblue;
   text-decoration: none;
 }
+
+/* ------------------------------------------- Buttons ------------------------------------------- */
 
 .btn {
   background: lightgrey;
@@ -57,6 +61,8 @@ body {
 .text {
   margin-top: 30px;
 }
+
+/* ------------------------------------------- Forms ------------------------------------------- */
 
 .form-control {
   margin: 20px 0 40px;
@@ -99,4 +105,16 @@ body {
 .form-control input:valid + label span {
   color: lightblue;
   transform: translateY(-30px);
+}
+
+/* ------------------------------------------- Logged In ------------------------------------------- */
+
+.loggedInCheck {
+  width: 80vw;
+  margin: 25px auto;
+}
+
+.testContainer {
+  width: 80vw;
+  margin: 25px auto;
 }
