--- a/styles/style2.css
+++ b/styles/style2.css
@@ -43,7 +43,7 @@ body {
   border-radius: 5px;
   border: 0;
   cursor: pointer;
-  display: inline-block;
+  /* display: inline-block; */
   font-family: inherit;
   font-size: 16px;
   padding: 15px;
@@ -55,6 +55,9 @@ body {
 }
 
 .btn:active {
+  background-color: white;
+  border: 1px solid;
+  color: black;
   transform: scale(0.98);
 }
 
@@ -105,6 +108,9 @@ body {
 .form-control input:valid + label span {
   color: lightblue;
   transform: translateY(-30px);
+}
+
+.generatePassword {
 }
 
 /* ------------------------------------------- Logged In ------------------------------------------- */
