--- a/styles/style.css
+++ b/styles/style.css
@@ -31,13 +31,14 @@ body {
 
 navbar {
   background-color: black;
-  display: inline-block;
+  /* display: inline-block; */
+  height: 75px;
   padding: 5px;
   position: fixed;
   text-align: center;
   top: 0;
   width: 100%;
-  vertical-align: middle;
+  /* vertical-align: middle; */
   /* font-size: 1.25em; */
   z-index: 1;
 }
@@ -48,6 +49,9 @@ navbar {
 
 navbar a {
   color: white;
+  font-size: 18px;
+  margin: 4px 2px;
+  padding: 16px 32px;
   text-decoration: none;
 }
 
@@ -55,9 +59,9 @@ navbar a:hover {
   background-color: white;
   border: none;
   color: black;
-  font-size: 16px;
-  margin: 4px 2px;
-  padding: 16px 32px;
+  /* font-size: 16px; */
+  /* margin: 4px 2px; */
+  /* padding: 16px 32px; */
   transition-duration: 0.4s;
   /* text-align: center; */
   /* text-decoration: none; */
@@ -65,11 +69,11 @@ navbar a:hover {
   /* cursor: pointer; */
 }
 
-.banner {
+/* .banner {
   background-color: lightgrey;
   color: black;
   width: 100vw;
-}
+} */
 
 /* -------------------- Background Images -------------------- */
 
@@ -81,12 +85,38 @@ navbar a:hover {
 /* background-position: center center; */
 /* } */
 
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../assets/pexels-photo-67468.jpeg");
+
+  /* Set a specific height */
+  height: 50%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
 .backgroundImgOne {
   /* background-image: "C:\Users\awill\code\__Personal Projects__\The-Fearless-Eater\assets\pexels-photo-67468.jpeg"; */
   /* width: 100vw; */
   /* min-height: 500px; */
   /* min-width: 100%; */
-  height: 750px;
+  height: 500px;
   width: 100%;
   /* background-position: center center; */
   object-fit: cover;
@@ -103,7 +133,7 @@ navbar a:hover {
 }
 
 .backgroundImgTwo {
-  position: relative;
+  /* position: relative; */
   height: 750px;
   width: 100%;
   object-fit: cover;
@@ -156,6 +186,8 @@ navbar a:hover {
 .container1 {
   background-color: black;
   border: 1px solid black;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+
   color: white;
   font-size: 1.2em;
   margin: 10px 200px 10px 200px;
@@ -167,11 +199,13 @@ navbar a:hover {
 .boxOne {
   width: 100%;
   background-color: black;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
 }
 
 .boxTwo {
   width: 100%;
   background-color: grey;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
 }
 
 /* -------------------- Merch -------------------- */
@@ -179,6 +213,7 @@ navbar a:hover {
 .merchItems1 {
   background-color: darkgrey;
   border: 1px solid black;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
   display: inline-block;
   padding: 10px;
   margin: 10px;
@@ -207,6 +242,7 @@ navbar a:hover {
 .blogPosts1 {
   background-color: darkgrey;
   border: 1px solid black;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
   display: inline-block;
   font-size: 1em;
   height: 400px;
@@ -224,26 +260,36 @@ navbar a:hover {
 
 /* -------------------- Contact -------------------- */
 
-#contact {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  width: 30%;
+.contactContainer {
+  border-radius: 5px;
+  /* background-color: #f2f2f2; */
+  padding: 10px;
+  /* align-content: center; */
 }
 
-#contactContainer {
-  background-color: #f2f2f2;
-  border: 1px solid black;
-  padding: 20px;
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  background-color: white;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 15px;
+  /* resize: vertical; */
 }
 
-/* -------------------- Forms -------------------- */
+.column {
+  /* float: left; */
+  /* width: 50%; */
+  /* margin-top: 6px; */
+  /* padding: 20px; */
+}
 
-form {
-  border: 1px solid black;
-  margin: 15px;
-  padding: 15px;
-  width: 400px;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* -------------------- Buttons -------------------- */
@@ -280,4 +326,14 @@ footer {
   /* bottom: 0; */
   /* z-index: 1; */
   /* display: inline-block; */
+}
+
+/* -------------------- Responsive Screen -------------------- */
+
+@media screen and (max-width: 600px) {
+  .column,
+  input[type="submit"] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
