--- a/styles/style2.css
+++ b/styles/style2.css
@@ -23,6 +23,8 @@ body {
 .container {
   background-color: lightslategray;
   border-radius: 5px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+
   padding: 20px 40px;
 }
 
