--- a/styles/style.css
+++ b/styles/style.css
@@ -115,13 +115,13 @@ navbar a:focus {
 /* -------------------- Background Images -------------------- */
 
 .backgroundImgTwo {
-  height: 750px;
+  height: 690px;
   object-fit: cover;
   width: 100%;
 }
 
 .backgroundImgThree {
-  height: 750px;
+  height: 600px;
   object-fit: cover;
   position: relative;
   width: 100%;
@@ -129,7 +129,7 @@ navbar a:focus {
 
 .backgroundImgFour {
   position: relative;
-  height: 750px;
+  height: 600px;
   width: 100%;
   object-fit: cover;
 
@@ -224,10 +224,12 @@ navbar a:focus {
 /* -------------------- Contact -------------------- */
 
 .contactContainer {
+  background-color: #f2f2f2;
   border-radius: 5px;
-  /* background-color: #f2f2f2; */
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+  margin: 0 0 25px 0;
   padding: 10px;
-  /* align-content: center; */
+  width: 40%;
 }
 
 input[type="text"],
