--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 body {
   text-align: left;
+  /* padding: 0; */
+  /* margin: 0; */
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (max-width: 48em) {
   body {
     text-align: center;
   }
