--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
+/* Some WIP styling courtesy of: https://github.com/bibeva/React-Bootstrap-Project-Corporate/ */
+
 html {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  /* background-color: lightgreen; */
 }
 
-*,
+#home {
+  /* box-sizing: border-box; */
+}
+
+/* *,
 *:before,
 *:after {
   box-sizing: inherit;
-}
+} */
 
 body {
-  text-align: left;
+  /* text-align: left; */
   /* padding: 0; */
   /* margin: 0; */
 }
 
 img {
   max-width: 100%;
-  height: auto;
-  vertical-align: top;
+  /* height: auto; */
+  /* vertical-align: top; */
 }
 
-a {
+/* .heroSectionBG {
+  width: "100%";
+  height: "100vh";
+  background-image: "url(assets/heroImage.jpg)";
+  background-size: "cover";
+  background-repeat: "no-repeat";
+} */
+
+/* .heroSectionText {
+  color: "#ffffff";
+  position: "absolute";
+  bottom: "0px";
+  left: "64px";
+} */
+
+/* a {
   color: #f64b4b;
   text-decoration: none;
   transition: color 0.3s ease;
-}
+} */
 
-a:hover,
+/* a:hover,
 a:focus {
   text-decoration: none;
   color: #f41a1a;
-}
+} */
 
-.go-top {
+/* .go-top {
   width: 50px;
   height: 50px;
   overflow: hidden;
@@ -47,9 +69,9 @@ a:focus {
   border-radius: 3px;
   color: #fff;
   border: 0;
-}
+} */
 
-.go-top:before {
+/* .go-top:before {
   width: 13px;
   height: 13px;
   transform: rotate(-45deg);
@@ -62,14 +84,20 @@ a:focus {
   top: 50%;
   left: 50%;
   margin: -3px 0 0 -6px;
-}
+} */
 
-.go-top:hover {
+/* .go-top:hover {
   background: #f41a1a;
-}
+} */
 
-@media screen and (max-width: 48em) {
+/* @media screen and (max-width: 48em) {
   body {
     text-align: center;
+  }
+} */
+
+@media only screen and (max-width: 600px) {
+  * {
+    /* text-align: center; */
   }
 }
