--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,11 @@ body {
 
 img {
   max-width: 100%;
-  height: auto;
-  vertical-align: top;
+  /* height: auto; */
+  /* vertical-align: top; */
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
+  /* padding: 5 5 5 5; */
+  /* margin: 5; */
 }
 
 .pageSection {
@@ -42,14 +45,14 @@ img {
   left: "64px";
 } */
 
-a {
+.navButton {
   color: #f64b4b;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
-a:hover,
-a:focus {
+.navButton:hover,
+.navButton:focus {
   text-decoration: none;
   color: #f41a1a;
 }
