--- a/src/App.css
+++ b/src/App.css
@@ -30,8 +30,8 @@ img {
 }
 
 .pageSection {
-  margin: "100px";
-  background-color: "red";
+  /* margin: "100px";
+  background-color: "red"; */
 }
 
 /* .heroSectionBG {
